[project]
name = "skeleton-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.10.1",
    "bitsandbytes==0.49.1",
    "datasets==4.0.0",
    "ipykernel==7.1.0",
    "jupyter==1.1.1",
    "numpy==2.1.0",
    "pandas==2.2.3",
    "peft==0.17.1",
    "torch==2.8.0",
    "transformers==4.56.0",
    "vllm==0.11.0"
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
